# NTAG21X

./: CMakeLists.txt  README.md
include/: NTAG21X.h
src/: NTAG21X.c
test/: NTAG21XTest.c  NTAG21XTest.h
